2011-04-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add test/veins-tree-skeleton.mat, test/veins-tree-skeleton.mha:

	- A 2D segmentation that looks like a tree of veins (with a
	cycle), to test skeleton_label().

	* Add test directory.

	- Directory to keep data and scripts for tests.

	* Add FiltersToolbox/skeleton_label.m:

	- SKELETON_LABEL Give each branch of a skeleton a different label.

2011-04-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/seg2dmat.m: v0.2.0

	- Add input variable for voxel size different from [1 1 1].

	- Add input flag to create a smaller output matrix, but indexing
	only the segmented voxels of the image, not all the voxels in the
	image.
	
	* Rename img_adjacency_distance.m as im2imat.m.

	* Rename img_adjacency_distance.cpp as im2imat.cpp.

	* FiltersToolbox/img_adjacency_distance.m: v0.1.1

	- Small rewrite of help header to make it more consistent with new
	function seg2dmat.

	* Add FiltersToolbox/seg2dmat.m: v0.1.0

	- SEG2DMAT Local neighbourhood distance matrix between
	segmentation voxels.

2011-04-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_seg2vesselness.m: v0.1.0

	- SCINRRD_SEG2VESSELNESS Vesselness parameters from a segmentation
	mask.

	* PointsToolbox/plotaxes.m: v0.2.0

	- Add varargin to be able to pass extra arguments to the plot
	function.

2011-03-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/surface_interpolation.m: v0.1.2

	- Add 'mbae' interpolation: Like the 'mba' method, but first a
	thin-plate spline is used to extrapolate values on the
	interpolation domain boundary. Then MBA is used for the local
	support interpolation of X and the boundary values set by the
	thin-plate spline.

2011-03-21  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_surface_interpolation.m:

	- Remove the surface interpolation code to create new function
	CardiacToolbox/surface_interpolation.m.
